# ai_cv_generator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/cv_generator/: generator.py  prompts.py
tests/: test_generator.py
